--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-# Use a remote theme from GitHub Pages
-remote_theme: "pages-themes/merlot@v0.2.0"
-
-# Enable the Jekyll Remote Theme plugin
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
