--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-remote_theme: "jekyll/minima@1e8a445"
+# Use a remote theme from GitHub Pages
+remote_theme: "pages-themes/merlot@v0.2.0"
+
+# Enable the Jekyll Remote Theme plugin
 plugins:
--jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
